--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       id="scene"
     >
       <a-assets>
-        <img id="my-image" src="pchel.jpg">
+        <a-video src="bees.mp4"></a-video>
       </a-assets>
 
       <a-marker
@@ -34,8 +34,8 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
       >
-        <a-image src="#my-image" rotation="-90 0 0">
-        </a-image>
+        <a-video src="#my-image" rotation="-90 0 0">
+        </a-video>
       </a-marker>
       
       <a-entity camera></a-entity>
