--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
       gesture-detector
       id="scene"
     >
-      <a-assets>
-        <a-video src="bees.mp4"></a-video>
-      </a-assets>
-
       <a-marker
         type="pattern"
         url="pattern.patt"
@@ -34,8 +30,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
       >
-        <a-video src="#my-image" rotation="-90 0 0">
-        </a-video>
+        <a-video src="bee.mp4"></a-video>
       </a-marker>
       
       <a-entity camera></a-entity>
