--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
       >
-        <a-video src="bee.mp4"></a-video>
+        <a-video src="bee.mp4"  rotation="-90 0 0"></a-video>
       </a-marker>
       
       <a-entity camera></a-entity>
